--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@auth0/angular-jwt": "^5.1.2",
+    "@nestjs/jwt": "^10.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
