--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "ngx-cookie-service": "^15.0.0",
     "rxjs": "~7.5.0",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
