--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@angular/common": "^15.1.4",
     "@angular/compiler": "^15.1.4",
     "@angular/core": "^15.1.4",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.1.4",
     "@angular/material": "^15.1.4",
     "@angular/platform-browser": "^15.1.4",
     "@angular/platform-browser-dynamic": "^15.1.4",
     "@angular/router": "^15.1.4",
     "chart.js": "^4.2.1",
+    "firebase": "^9.17.1",
     "ngx-cookie-service": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
