--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.0.0",
     "@auth0/angular-jwt": "^5.1.2",
     "@nestjs/jwt": "^10.0.2",
+    "@ngneat/hot-toast": "^5.0.1",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
